--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@onwidget/astrowind",
-  "description": "A template to make your website using Astro + Tailwind CSS.",
+  "description": "Cantoverse Website",
   "version": "0.9.8",
   "scripts": {
     "dev": "astro dev",
